# python-ai-chatbot

./: .env.sample  .gitignore  pyproject.toml
python-ai-chatbot/: __main__.py
python_ai_chatbot/: __init__.py  __main__.py  load_json.py  open_ai.py  test_json_data.json
